# api/src/repo2ree_api/main.py
@@ -20,6 +20,7 @@ from repo2ree_api.experiment_run import experiment_run_router
 from repo2ree_api.generate_hbom import generate_hbom_router
 from repo2ree_api.generate_sbom import generate_sbom_router
 from repo2ree_api.manage_ree import manage_ree_router
+from repo2ree_api.ree_steps import ree_steps_router
 from repo2ree_api.runs import runs_router
 from repo2ree_api.scorecard import scorecard_router
 from repo2ree_api.script_templates import script_templates_router
@@ -131,6 +132,7 @@ app.include_router(cross_check_sbom_router)
 app.include_router(activation_test_router)
 app.include_router(evaluate_router)
 app.include_router(scorecard_router)
+app.include_router(ree_steps_router)
 app.include_router(runs_router)
 app.include_router(manage_ree_router)
 app.include_router(script_templates_router)
